--- a/gradle.properties
+++ b/gradle.properties
@@ -33,3 +33,5 @@ gspVersion=4.0.0.RC2
 legacyConvertersVersion=4.0.0
 testingSupportVersion=2.0.0.RC1
 scaffoldingCoreVersion=2.0.0.RC1
+
+org.gradle.caching=true
